--- a/package.json
+++ b/package.json
@@ -12,10 +12,9 @@
   "dependencies": {
     "express": "^4.17.1",
     "moment": "^2.24.0",
-    "socket.io": "^2.4.1",
-    "websockets": "^0.2.0"
+    "socket.io": "^2.4.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.2"
   }
 }
